--- a/app/views/sales/_sale_li.html.erb
+++ b/app/views/sales/_sale_li.html.erb
@@ -15,7 +15,7 @@
     <span class="thisInfo">
     </span>
     <div class="hover-toggle">
-      <center><span class="percentoff">$<%= sale.orig_price %></span></center>
+      <center><span class="percentoff"><%= humanized_money_with_symbol sale.orig_price %></span></center>
     </div>
   </div>
 </div>
