--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -73,13 +73,21 @@
 
       <br>
       <center><p>Or <a href="<%= new_user_url %>"><u>your email</u></a>.</center><br>
-		    <center><p>Merchants click <u><a href="/merchants/new">here</a></u>.</p></center> 
+		    <center><p>To list private holdings, click <u><a href="/merchants/new">here</a></u>.</p></center> 
 		     </div>
 		    </div>
 		  
 			<div>
+				<div>
 		
     
 
 
 		    </div> <!-- /container -->
+				<div id="footer">
+				    <medium>
+			       <font color="#ffffff"> 
+				
+				<p>&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %><a href="/page/tos"> Terms of Service</a> and <a href="/page/privacy">Privacy Policy</a></p>
+			     </font> </medium>
+			    </div>
