--- a/app/views/purchases/add_to_cart.html.erb
+++ b/app/views/purchases/add_to_cart.html.erb
@@ -14,6 +14,7 @@ body {
 <% for item in @cart.items %>
 	<li><%= h(item.brand) %></li>
 	<li><%= h(item.orig_price) %></li>
+	<li><%= item.orig_price.sum %></li>
 	
 	
 <% end %>
