--- a/app/views/purchases/view_cart.html.erb
+++ b/app/views/purchases/view_cart.html.erb
@@ -1,73 +1,91 @@
-<style>
-body {
-  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-}
-</style>
+    <div class="container">
+     
+      	<div class="category-feed-cart well">
+			    <div class="back-button btn btn-success"><a href="/sales">Back</a></div>
+
+			    <span class="category-feed-align">
+			      <% Sale.categories.each_with_index do |category, category_id| %>
+			        <% if category_id == params[:category_id].to_i %><strong><% end %>
+			        <%= link_to category.upcase, sales_url(:category_id => category_id) %>&#160;
+			        <% unless category_id == Sale.categories.size-1 %>|&#160;<% end %>
+			        <% if category_id == params[:category_id].to_i %></strong><% end %>
+			      <% end %>
+			    </span>
+
+			    <a href="/featured/new-stuff" class="faves-script-detail btn btn-success">
+			      What's New
+			    </a>
+
+
+
+			  </div> </div>
 
 
 <div class="container">
-  <div class="marketing">
-
-<h1>Your Cart</h1>
-
-<ul>
-<% for item in @cart.items %>
-	<li><%= h(item.brand) %></li>
-	<li><%= h(item.orig_price) %></li>
-	
-
-</ul>
-<table class="table table-bordered">               
- <% if @item.sizes.length == 1 %>
-   <tr>
-   <td>
-      <font size="3" class="muted">Size</font>
-    </td> 
-    <td>
-      <%= @item.size %> 
-      <%= hidden_field_tag 'transaction[custom_fields][size]', @item.size %>
-   </td>
- </tr>
- <% end %>
-  <tr>
-    <td>
-      <font size="3" class="muted">Sale Price</font>
-    </td>
-    <td>
-      <%= humanized_money_with_symbol @item.subtotal %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <font size="3" class="muted">Sales Tax</font>
-    </td>
-    <td>
-      <%= humanized_money_with_symbol @item.tax %>
-    </td>
-  </tr>
-  <% if params[:ship].to_i == 1 %>
-    <tr id="shipping_row">
-    <td>
-      <font size="3" class="muted">Shipping</font>
-    </td>
-    <td>
-      <%= humanized_money_with_symbol @item.shipping %>
-    </td>
-  </tr>
-<% end %>
-</tr>
-<tr id="total">
-  <td>
-    <font size="3" class="muted">Total</font>
-  </td>
-  <td>
-    <%= humanized_money_with_symbol @purchase.total %>
-  </td>
-</tr>                  
-</table>
-<% end %>
-
-</div><br><br><br><br><br>
-<a href="/sales" class="btn btn-success">Return to Shopping</a><br><br>
-<%= button_to "Clear Cart", {:action => "clear_cart"}, :class => "btn btn-success" %>
+<div class="shopping-cart">
+<div class="cart-header">
+<div class="title upcase">Your Shopping Cart</div>
 </div>
+<div class="expired-items-container" style=""></div>
+<div class="cart-content clearfix">
+<div class="item-container" style="">
+<div class="empty hide" style="display: block;">
+<div class="item-listing">
+	<% if @cart.items.empty? %>
+<p>
+Your cart is empty!
+<a href="/shop">Go shop?</a>
+</p><% else %>
+
+<% end %>
+</div>
+</div>
+</div>
+<div class="loading" style="display: none;">
+<div class="spinner"></div>
+</div>
+<div class="order-summary" style="position: static; top: 70px; left: 665px; width: 360px;">
+<div class="cart-body summary-body">
+<div class="summary-title">Order Summary</div>
+<div class="summary-totals-container" style=""><dl>
+	<% for item in @cart.items %>
+	<dt class="subtotal"><%= h(item.product) %>:</dt>
+  <dd class="subtotal">$<%= h(item.orig_price) %></dd>
+	<% end %>
+  <dt class="subtotal">Subtotal:</dt>
+  <dd class="subtotal"><%= humanized_money_with_symbol @cart.items.sum(&:orig_price) %></dd>
+  <dt>	Shipping:</dt>
+  <dd class="free">FREE</dd>
+</dl>
+<hr>
+<dl class="total">
+  <dt>Total:</dt>
+  <dd><%= humanized_money_with_symbol @cart.items.sum(&:orig_price) %></dd>
+</dl></div>
+<div class="checkout-button">
+<div style="margin:0;padding:0;display:inline"></div>
+<button class="btn btn-success" disabled="disabled">Continue &gt;</button>
+</form>
+
+</div>
+
+</div>
+<div class="summary-bookend">
+
+<div class="pull-right">
+Questions? <a href="mailto:hi@vayldation.com">Email Us</a>
+
+</div>
+</div>
+
+
+</div>
+</div>
+</div>
+
+</div>
+
+
+</div>
+		  
+			        
