--- a/app/views/purchases/add_to_cart.html.erb
+++ b/app/views/purchases/add_to_cart.html.erb
@@ -1,27 +1,6 @@
-<style>
-body {
-  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-}
-</style>
+<%= render :partial => 'cart' %>
 
 
 <div class="container">
-  <div class="marketing">
-
-<h1>Your Cart</h1>
-
-<ul>
-<% for item in @cart.items %>
-	<li><%= h(item.brand) %></li>
-	<li><%= h(item.orig_price) %></li>
-
-	
-	
-<% end %>
-</ul>
-
-<a href="/sales" class="btn btn-success">Return to Shopping</a><br><br>
-<%= button_to "Clear Cart", {:action => "clear_cart"}, :class => "btn btn-success" %>
-<br><br><br><br>
-</div>
+<%= link_to "Clear Cart", {:action => "clear_cart"}, :class => "pull-right" %>
 </div>
