Patricia Edits plus Secret Token Change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <% if @user.is_merchant %><li><a href="<%= new_sale_url %>">Upload</a></li><% end %>
-							<li><a href="<%= view_cart_url %>" class="cart-icon"><%= image_tag 'cart-icon.png', :height => 40, :width => 32 %><div class="item-count notification-count"><%= @cart.items.size %></div></a></li>
+							<li><a href="<%= view_cart_url %>" class="cart-icon"><%= image_tag 'cart-icon.png', :height => 40, :width => 32 %><% unless @cart.items.empty? %><div class="item-count notification-count"><%= @cart.items.size %></div><% end %></a></li>
 							<li><a href="<%= edit_user_url("self") %>">Account</a></li>
               <li><a href="/page/about">About Us</a></li>
               <li><%= link_to "Blog", "http://www.valydation.tumblr.com", :target => "_blank" %></li>
