--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -47,9 +47,9 @@ body {
     <input name="subject" type="text" placeholder="Type something">
   </fieldset>
   <label>Message *</label>
-  <textarea name="message" rows="10" class="span9"></textarea><br>
+  <textarea name="message" rows="8" class="span9"></textarea><br><br>
   <button type="submit" class="btn btn-large btn-success">Submit</button><br>
-* indicates a required field
+* Indicates a required field
 <% end %>
 </div>
 </div>
