--- a/app/views/pages/consignment.html.erb
+++ b/app/views/pages/consignment.html.erb
@@ -48,7 +48,7 @@ body {
     <input name="subject" type="text" placeholder="Type something">
   </fieldset>
   <label>Company and Product Description *</label>
-  <textarea name="message" rows="10" class="span9"></textarea><br>
+  <textarea name="message" rows="8" class="span9"></textarea><br><br>
   <button type="submit" class="btn btn-large btn-success">Submit</button><br>
 * indicates a required field
 <% end %>
