Cart Instance in App and Edits to Account Page Detail

--- a/app/views/purchases/_cart.html.erb
+++ b/app/views/purchases/_cart.html.erb
@@ -35,7 +35,7 @@
 	<% if @cart.items.empty? %>
 <p>
 Your cart is empty!
-<a href="/shop">Go shop?</a>
+<a href="/sales">Go shop?</a>
 </p><% else %>
 
 <% end %>
