--- a/app/views/pages/consignment.html.erb
+++ b/app/views/pages/consignment.html.erb
@@ -11,12 +11,12 @@ body {
 	            <ul class="nav nav-list">
 	              <li class="nav-header">Helpful Stuff</li>
             <li><a href="/page/about">About</a></li>
-            <li><a href="/page/photo-tips">Authenticity</a></li>
-             <li><a href="/page/help">Help</a></li>
+            <li><a href="/page/authenticity">Authenticity</a></li>
+             <li><a href="/page/help%20">Help</a></li>
+						<li class="active"><a href="/contact">Consignment</a></li>
             <li><a href="http://valydation.tumblr.com/">Blog</a></li>
               <li><a href="/page/jobs">Jobs</a></li>
             <li><a href="/contact">Contact</a></li>
-						<li class="active"><a href="/contact">Consignment</a></li>
             <li class="nav-header">Legal Stuff</li>
             <li><a href="/page/privacy">Privacy Policy</a></li>
             <li><a href="/page/tos">Terms of Service</a></li>
