--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -68,6 +68,13 @@
                    </div>
                  </div>
 
+									<div class="control-group">
+                   <label class="control-label" for="sale_product_history">Product History</label>
+                   <div class="controls">
+                     <%= text_area(:sale, :product_history, :rows => 10, :class => "input-xxlarge") %>
+                   </div>
+                 </div>
+
                  <div class="control-group">
                    <label class="control-label" for="sale_category_id">Category</label>
                    <div class="controls">
@@ -108,12 +115,7 @@
                               </div>
                             </div>
 
-														<div class="control-group">
-                              <label class="control-label" for="sale_product_history">Product History</label>
-                              <div class="controls">
-                                <%= text_area_tag(:sale, :product_history, :rows => 10, :class => "input-xxlarge") %>
-                              </div>
-                            </div>
+														
 
 														<div class="control-group">
                               <label class="control-label" for="sale_condition">Condition</label>
