--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -184,7 +184,7 @@ return true;
 
 	                            <p>
 	                               
-	                                As with all Valydation inventory, this item is<br> guaranteed by 
+	                                As with all Valydation inventory, this item is guaranteed by 
 	                                <a href="#promise-lightbox" class="promise_link">The Valydation Promise.</a>
 	                            </p>
 	                        </div>
