Adding Filter By Company

--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -128,7 +128,8 @@ return true;
 	                        <p class="savings">
 
 	                                                           
-	            <%= sale.condition if sale.condition %>   
+	            <%= sale.condition if sale.condition %>   <br>
+							size: <%= sale.size if sale.size %>
 
 
 	                                                                                      </p>
@@ -184,8 +185,8 @@ return true;
 
 	                            <p>
 	                               
-	                                As with all Valydation inventory, this item is guaranteed by 
-	                                <a href="#promise-lightbox" class="promise_link">The Valydation Promise.</a>
+	                                As with all Valydation pieces, this item is guaranteed by 
+	                                our promise of authenticity.
 	                            </p>
 	                        </div>
 
