--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -58,7 +58,7 @@
             <ul class="nav">
               <% unless @no_header_links %>
               <li><%= link_to "Join", register_url %></li>
-              <li><%= link_to "About Us", "pages/about" %></li>
+              <li><%= link_to "About Us", "page/about" %></li>
               <li><%= link_to "Login", new_session_url %></li>
               <% end %>
             </ul>
