cart purchase WIP

--- a/app/views/purchases/_cart.html.erb
+++ b/app/views/purchases/_cart.html.erb
@@ -85,7 +85,7 @@ Your cart is empty!
 </dl></div>
 <div class="checkout-button">
 <div style="margin:0;padding:0;display:inline"></div>
-<button class="btn btn-success">Continue</button>
+<button class="btn btn-success" onclick="window.location='<%= new_purchase_url %>'">Continue</button>
 </form>
 
 </div>
