--- a/app/views/pages/consignment.html.erb
+++ b/app/views/pages/consignment.html.erb
@@ -13,7 +13,7 @@ body {
             <li><a href="/page/about">About</a></li>
             <li><a href="/page/authenticity">Authenticity</a></li>
              <li><a href="/page/help%20">Help</a></li>
-						<li class="active"><a href="/contact">Consignment</a></li>
+						<li class="active"><a href="/consignment"  target="blank">Consignment</a></li>
             <li><a href="http://valydation.tumblr.com/">Blog</a></li>
               <li><a href="/page/jobs">Jobs</a></li>
             <li><a href="/contact">Contact</a></li>
@@ -40,12 +40,12 @@ body {
   <fieldset>
 
     <label>Email *</label>
-    <input name="email" type="text" placeholder="Type something">
+    <input name="email" type="text" placeholder="Type here">
   </fieldset>
   <fieldset>
 
     <label>Phone Number *</label>
-    <input name="subject" type="text" placeholder="Type something">
+    <input name="subject" type="text" placeholder="Type here">
   </fieldset>
   <label>Company and Product Description *</label>
   <textarea name="message" rows="8" class="span9"></textarea><br><br>
