--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -13,8 +13,8 @@ body {
             <li><a href="/page/about">About</a></li>
             <li><a href="/page/authenticity">Authenticity</a></li>
              <li><a href="/page/help%20">Help</a></li>
-						<li><a href="/contact">Consignment</a></li>
-            <li><a href="http://valydation.tumblr.com/">Blog</a></li>
+						<li><a href="/consignment">Consignment</a></li>
+            <li><a href="http://valydation.tumblr.com/" target="blank">Blog</a></li>
               <li><a href="/page/jobs">Jobs</a></li>
             <li class="active"><a href="/contact">Contact</a></li>
             <li class="nav-header">Legal Stuff</li>
@@ -40,12 +40,12 @@ body {
   <fieldset>
 
     <label>Email *</label>
-    <input name="email" type="text" placeholder="Type something">
+    <input name="email" type="text" placeholder="Type here">
   </fieldset>
   <fieldset>
 
     <label>Subject *</label>
-    <input name="subject" type="text" placeholder="Type something">
+    <input name="subject" type="text" placeholder="Type here">
   </fieldset>
   <label>Message *</label>
   <textarea name="message" rows="8" class="span9"></textarea><br><br>
