--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -21,7 +21,8 @@
   <div style="float:right; padding: 8px; width: 140px; height: 100px;">
     <% (0..7).to_a.each do |i| %>
       <div style="margin-bottom: 16px; ">
-        <% image = @sale.send("image_#{i}") %>
+        <% image = @sale.send("image_#{i}")
+           image.success_action_redirect = new_admin_sale_sale_image_url(@sale) %>
         <div style="border: 1px dashed black; margin-left:27px; margin-bottom: 2px; width: 69px; height: 69px;">
           <% if image.url %>
           <img src="<%= image.versions[:web_thumbnail] %>" width="69" height="69">
@@ -31,10 +32,23 @@
           Image <%= i %>
         </div>
         <div class="clear"></div>
-        <button type="submit" class="btn btn-small btn-primary">Upload</button>
-        <% if image.url %>
-        <button type="submit" class="btn btn-small btn-danger">Delete</button>
+
+      
+       <% uploader = Sale.new.send("image_#{i}")
+       uploader.success_action_redirect = new_admin_sale_sale_image_url(@sale, :image => i) %>
+        
+        <%= direct_upload_form_for(uploader, :html => {:id => "image_#{i}_form" }) do |f| %>
+          <%= f.file_field "image_#{i}", :id => "image_#{i}_file", :style => "display:none;" %>
+          <%= f.submit("Submit", :class => "btn btn-small btn-primary", :id => "image_#{i}_submit", :style => "display:none;") %>
+          <button class="btn btn-small btn-primary" id="image_<%= i %>_upload" onclick="jQuery('#image_<%= i %>_submit')[0].style.display='inline-block'; jQuery('#image_<%= i %>_upload')[0].style.display='none'; jQuery('#image_<%= i %>_file')[0].style.display='inline-block'; jQuery('#image_<%= i %>_file')[0].click(); return false;">Upload</button>
+          <% if image.url %>
+            <%= link_to 'Delete', admin_sale_sale_image_path(@sale, i),
+            :confirm => 'Are you 100% positive that you want to delete this image?', 
+            :method => :delete,
+            :class => "btn btn-danger btn-small" %>
+          <% end %>
         <% end %>
+          
       </div>
     <% end %>
   </div>
