--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -25,7 +25,9 @@
            image.success_action_redirect = new_admin_sale_sale_image_url(@sale) %>
         <div style="border: 1px dashed black; margin-left:27px; margin-bottom: 2px; width: 69px; height: 69px;">
           <% if image.url %>
-          <img src="<%= image.versions[:web_thumbnail] %>" width="69" height="69">
+            <img src="<%= image.versions[:web_thumbnail] %>" width="69" height="69">
+          <% elsif @sale.send("temp_image_url_#{i}") %>
+            <div style="margin-left: 5px; margin-top: 24px; font-size: 10px;">Processing...</div>
           <% end %>
         </div>
         <div style="margin-left: 27px; width: 69px; text-align: center; margin-bottom: 2px; ">
